tests/paczka2/big_fuzzy/50185079.err
Error in line 5: c7v A520 99,8
Error in line 11: kED9S1OYZ S879 27,0
Error in line 20: c7v S879 41,9
Error in line 23: c7v A506 88,9
Error in line 24: c7v A698 93,0
Error in line 43: oQZSnkgTm31 S879 38,2
Error in line 44: kED9S1OYZ A506 6,6
Error in line 50: oQZSnkgTm31 A506 10,0
Error in line 56: A698 A698 20,9
Error in line 64: kED9S1OYZ A506 65,5
Error in line 66: c2uKlOHi A506 12,5
Error in line 78: oQZSnkgTm31 A698 12,0
Error in line 70: kED9S1OYZ A698 58,2
Error in line 84: c7v A520 277,6
Error in line 89: oQZSnkgTm31 A506 94,9
Error in line 99: c7v S879 36,6
Error in line 134: c7v A520 51,7
Error in line 122: c2uKlOHi A698 80,4
Error in line 144: c2uKlOHi A506 92,5
Error in line 146: c2uKlOHi A698 49,1
Error in line 159: c2uKlOHi A506 92,1
Error in line 168: 2uKlOHi A520 36,4
Error in line 174: A698 A506 56,2
Error in line 176: A698 A520 70,3
Error in line 183: c2uKlOHi A698 57,0
Error in line 207: oQZSnkgTm31 S879 64,7
Error in line 209: oQZSnkgTm31 A520 24,9
Error in line 215: AqZlFBz A506 54,2
Error in line 216: AqZlFBz S879 28,6
Error in line 217: AqZlFBz A520 29,1
Error in line 225: vjlJiAT S879 33,0
Error in line 233: oQZSnkgTm31 A698 18,4
Error in line 229: vjlJiAT A506 96,7
Error in line 235: oQZSnkgTm31 A506 62,6
Error in line 242: kED9S1OYZ A698 55,9
